Arnaud : Amélioration alignement Formulaire sur submit.php Correction requête sql mesImages.php

--- a/StreetArtProject/css/bootstrap.css
+++ b/StreetArtProject/css/bootstrap.css
@@ -2261,7 +2261,7 @@ th {
   text-align: left;
 }
 .table {
-  width: 100%;
+  width: 10%;
   max-width: 100%;
   margin-bottom: 20px;
 }
@@ -2271,7 +2271,7 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 8px;
+  padding: 20px;
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
@@ -2289,7 +2289,7 @@ th {
   border-top: 0;
 }
 .table > tbody + tbody {
-  border-top: 2px solid #ddd;
+  border-top: 100px solid #ddd;
 }
 .table .table {
   background-color: #fff;
